--- a/README
+++ b/README
@@ -1,1 +1,25 @@
-mmm
+# AVL Tree (Self-Balancing Binary Search Tree)
+
+This project demonstrates how an AVL Tree works using Java
+
+> 💡 **Note:** This project was developed as part of my academic coursework in the Computer Science program.
+
+
+## 📌 Features
+- Insert nodes dynamically
+- Auto-balance using rotations
+- Track tree height and balance factor
+- Sample test with printed output
+
+## 🧠 Concepts Covered
+- Binary Search Tree (BST)
+- Tree height calculation
+- Balance Factor logic
+- Left / Right Rotations
+- O(log n) time complexity
+
+## 🔍 Sample Output
+```java
+Inserting 10, 20, 30...
+Rotation triggered (Left-Left)
+Balance Factor = 0
